--- a/app/src/main/res/layout/layout_loading_list_item.xml
+++ b/app/src/main/res/layout/layout_loading_list_item.xml
@@ -2,9 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_gravity="center"
+    android:layout_height="wrap_content">
 
     <ProgressBar
+
         android:id="@+id/loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
